cmake_minimum_required(VERSION 3.27)
project(Full_C_Plus_Plus_Course)

set(CMAKE_CXX_STANDARD 14)

add_executable(Full_C_Plus_Plus_Course
        Week1/Lecture1/Lecture1.cpp
        Week1/Lecture1/AreaAndNumberInput.cpp
        Week1/Lecture1/DisplayTime.cpp
        Week1/Lecture1/ShowCurrentTime.cpp
        Week1/Lecture1/TwoDigitsAfterDecimalPoints.cpp
        Week1/Lecture1/CountingMonetaryUnits.cpp
        Week1/Lab1/Task1.cpp
        Week1/Lab1/Task5.cpp
        Week1/Lab1/Task7.cpp
        Week1/Lab1/Task8.cpp
        Week1/Lab1/Trokut.cpp
        Week1/Lab1/ASCII.cpp
        Week1/Lab1/PalindromCheck.cpp
        Week1/Lab1/Task9.cpp
        Lab2/Task1.cpp
        Lab2/Task2.cpp
        Lab2/Task3.cpp
        Lab2/Task4.cpp
        Lab2/Task5.cpp
        Lab2/Task6.cpp
        Lab2/Task7.cpp
        Lab2/Task7.cpp
        Lab2/Task8.cpp
        Lab2/Task9.cpp
        Lab2/Task10.cpp
        Lab2/Task11.cpp
        Lab2/Task12.cpp
        Lab2/Task13.cpp
        Lab3/Task3.cpp
        Lab3/Task4.cpp
        Lab3/Task5.cpp
        Lab3/Task6.cpp
        Week1/Lab1/PalindromStrings.cpp
        Lab3/Task7.cpp
        Lab3/Task8.cpp
        Lab3/Task9.cpp
        Lab3/Task10.cpp
        Lab3/Task11.cpp
)
