cmake_minimum_required(VERSION 3.27)
project(Full_C_Plus_Plus_Course)

set(CMAKE_CXX_STANDARD 14)

add_executable(Full_C_Plus_Plus_Course
        Week1/Lecture1/Lecture1.cpp
        Week1/Lecture1/AreaAndNumberInput.cpp
        Week1/Lecture1/DisplayTime.cpp
        Week1/Lecture1/ShowCurrentTime.cpp
        Week1/Lecture1/TwoDigitsAfterDecimalPoints.cpp
        Week1/Lecture1/CountingMonetaryUnits.cpp
        Week1/Lab1/Task1.cpp
        Week1/Lab1/Task5.cpp
        Week1/Lab1/Task7.cpp
        Week1/Lab1/Task8.cpp
        Week1/Lab1/Trokut.cpp
        Week1/Lab1/ASCII.cpp
        Week1/Lab1/PalindromCheck.cpp
        Week1/Lab1/Task9.cpp
        Lab2/Task1.cpp
        Lab2/Task2.cpp
        Lab2/Task3.cpp
        Lab2/Task4.cpp
        Lab2/Task5.cpp
        Lab2/Task6.cpp
        Lab2/Task7.cpp
        Lab2/Task7.cpp
        Lab2/Task8.cpp
        Lab2/Task9.cpp
        Lab2/Task10.cpp
        Lab2/Task11.cpp
        Lab2/Task12.cpp
        Lab2/Task13.cpp
        Lab3/Task3.cpp
        Lab3/Task4.cpp
        Lab3/Task5.cpp
        Lab3/Task6.cpp
        Week1/Lab1/PalindromStrings.cpp
        Lab3/Task7.cpp
        Lab3/Task8.cpp
        Lab3/Task9.cpp
        Lab3/Task10.cpp
        Lab3/Task11.cpp
        Week1/Lab1/Task10.cpp
        Week1/Lab1/Task11.cpp
        Week1/Lab1/Task12.cpp
        Lab4/Task1.cpp
        Lab4/Task2.cpp
        Lab4/Task3.cpp
        Lab4/Task4.cpp
        Lab4/Task5.cpp
        Lab4/Task5b.cpp
        Lab4/Task6.cpp
        Lab4/Task7.cpp
        Lab4/Task8.cpp
        Lab4/Task9.cpp
        Lab4/Task10.cpp
        Lab4/Task11.cpp
        Lab4/Task12.cpp
        Lab4/Task13.cpp
        Lab4/Task14.cpp
        Lab4/Task15.cpp
        Lab5/Task1.cpp
        Lab5/Task2.cpp
        Lab5/Task3.cpp
        Lab5/Task4.cpp
        Lab5/Task5.cpp
        Lab5/Task6.cpp
        Lab5/Task7.cpp
        Lab5/Task8.cpp
        Lab5/Task9.cpp
        Lab5/Task10.cpp
        Lab5/Task11.cpp
        Lab6/Task1.cpp
        Lab6/Task2.cpp
        Lab6/Task3.cpp
        Lab6/Task4.cpp
        Lab6/Task5.cpp
        Lab6/Task6.cpp
        Lab6/Task7.cpp
        Lab7/Task1.cpp
        Lab7/Task2.cpp
        Lab7/Task3.cpp
        Lab7/Task4.cpp
        Lab7/Task5.cpp
        Lab7/Task6.cpp
        Lab7/Task7.cpp
        Lab7/Task8.cpp
        Lab7/Task9.cpp
        Lab7/Task10.cpp
        Lab7/Task11.cpp
        Lab8/Task1.cpp
        Lab8/Task2.cpp
        Lab8/Task3.cpp
        Lab8/Task4.cpp
        Lab8/Task5.cpp
        Lab9/Car.cpp
        Lab9/Course.cpp
        Lab9/Student.cpp
        Lab9/Triangle.cpp
        Lab9/Room.cpp
        Lab9/Calculator.cpp
        Lab9/Employee.cpp
        Lab9/Person.cpp
        Lab9/TrafficLights.cpp
        Lab9/Movie.cpp
        Lab10/Task1.cpp
        Lab10/Task2.cpp
        Lab10/Task3.cpp
        Lab10/Task4.cpp
        Lab10/Task7.cpp
        Lab10/Task8.cpp
        Week1/Lab1/Task16.cpp
        Week1/Lab1/Task14.cpp
        Lab1V2/Task1.cpp
        Lab1V2/Task5.cpp
        Lab1V2/Task7.cpp
        Lab1V2/Task8.cpp
        Lab1V2/Task8V2.cpp
        Lab1V2/Task9.cpp
        Lab1V2/Task10.cpp
        Week1/Lab1/Task67.cpp
        Lab1V2/Task11.cpp
        Lab1V2/Task12.cpp
        Lab1V2/Task13.cpp
        Lab1V2/Task16.cpp
        Lab1V2/Task15.cpp
        Lab1V2/Task4.cpp
        Lab2V2/Task1.cpp
        Lab2V2/Task2.cpp
        Lab2V2/Task3.cpp
        Lab2V2/Task4.cpp
        Lab2V2/Task5.cpp
        Lab2V2/Task6.cpp
        Lab2V2/Task6.cpp
        Lab2V2/Task7.cpp
        Lab2V2/Task7.cpp
        Lab2V2/Task8.cpp
        Lab2V2/Task8.cpp
        Lab2V2/Task9.cpp
        Lab2V2/Task9.cpp
        Lab2V2/Task10.cpp
        Lab2V2/Task11.cpp
        Lab2V2/Task12.cpp
        Lab2V2/Task1V3.cpp
        Lab2V2/Task2V3.cpp
        Lab2V2/Task3V3.cpp
        Lab2V2/Task7V3.cpp
        Lab2V2/Task8V3.cpp
        Lab2V2/Task4V3.cpp
        Lab2V2/Task5V3.cpp
        Lab2V2/Task6V3.cpp
        Lab2V2/Task9V3.cpp
        Lab2V2/Task10V3.cpp
        Lab2V2/Task11V3.cpp
        Lab2V2/Task12V3.cpp
        Lab2V2/Task13V3.cpp
        Lab2V2/Task14V3.cpp
        Lab2V2/Task15V3.cpp
        Lab3/Demo.cpp
        Lab3/Demo.cpp
        Lab3/Demo2.cpp
        Lab3/Task6V2.cpp
        Lab3/Task1V2.cpp
        "Lab3/lab3(2)-2024.cpp"
        Lab3/Task2V2.cpp
        Lab3/Task5V2.cpp
        Lab3/Task7V2.cpp
        Lab3/Task8V2.cpp
        Lab3/Task9V2.cpp
        Lab3/Task10V2.cpp
        Lab3/Task11V2.cpp
)
add_executable(new_target Lab2V2/Task8.cpp)
